correcting input length for characters on mobile to 190

--- a/style.css
+++ b/style.css
@@ -105,11 +105,11 @@ select {
   };
 
   #playerSelect {
-    width: 25px;
+    width: 100px;
   }
 
   #characterSelect {
-    width: 25px;
+    width: 190px;
   }
 
   #rightBox {
